--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 img {
-    width: 200px;
+    width: 500px;
 }
 body {
     text-align: center;
     font-family: "Arial";
-    background: azure;
-    color: purple;
+    background: floralwhite;
+    color: darkblue;
 }
